objects/STobj3__c.object
<CustomObject>
    <fields>
        <fullName>f1__c</fullName>
        <label>f1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f2__c</fullName>
        <label>f2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f3__c</fullName>
        <label>f3</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>STobj3</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>f1__c</columns>
        <columns>f2__c</columns>
        <columns>f3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STobj3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STobj3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>